@@ -813,6 +813,291 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testNonHiveCommand
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"drop table "
+operator|+
+name|tableName
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{     }
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"create table "
+operator|+
+name|tableName
+operator|+
+literal|" (num int)"
+argument_list|)
+expr_stmt|;
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"load data local inpath '"
+operator|+
+name|dataFilePath
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|"' into table "
+operator|+
+name|tableName
+argument_list|)
+expr_stmt|;
+comment|// Command not part of HiveQL -  verify no results
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"SET hive.mapred.mode = nonstrict"
+argument_list|)
+expr_stmt|;
+name|Schema
+name|schema
+init|=
+name|client
+operator|.
+name|getSchema
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|schema
+operator|.
+name|getFieldSchemasSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|schema
+operator|.
+name|getPropertiesSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|Schema
+name|thriftschema
+init|=
+name|client
+operator|.
+name|getThriftSchema
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|thriftschema
+operator|.
+name|getFieldSchemasSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|thriftschema
+operator|.
+name|getPropertiesSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|fetchOne
+argument_list|()
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|fetchN
+argument_list|(
+literal|10
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|fetchAll
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// Execute Hive query and fetch
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"select * from "
+operator|+
+name|tableName
+operator|+
+literal|" limit 10"
+argument_list|)
+expr_stmt|;
+name|String
+name|row
+init|=
+name|client
+operator|.
+name|fetchOne
+argument_list|()
+decl_stmt|;
+comment|// Re-execute command not part of HiveQL - verify still no results
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"SET hive.mapred.mode = nonstrict"
+argument_list|)
+expr_stmt|;
+name|schema
+operator|=
+name|client
+operator|.
+name|getSchema
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|schema
+operator|.
+name|getFieldSchemasSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|schema
+operator|.
+name|getPropertiesSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|thriftschema
+operator|=
+name|client
+operator|.
+name|getThriftSchema
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|thriftschema
+operator|.
+name|getFieldSchemasSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|thriftschema
+operator|.
+name|getPropertiesSize
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|fetchOne
+argument_list|()
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|fetchN
+argument_list|(
+literal|10
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|client
+operator|.
+name|fetchAll
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// Cleanup
+name|client
+operator|.
+name|execute
+argument_list|(
+literal|"drop table "
+operator|+
+name|tableName
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Test metastore call    */
 specifier|public
 name|void
